--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -36,15 +36,24 @@ Access is from the Huanta to Uchuraccay road where a track turns off it and runs
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
+
+Q1.3 está situado en un amplio valle cuyas laderas comienzan a elevarse rápidamente, por lo que la llanura de inundación es estrecha. 
+
+El lugar de estudio está situado bajo un bofedal y una antigua presa, ahora en ruinas, donde una trocha para animales cruza el río. Hay un pequeño grupo de casas justo encima del bofedal conocido como Yanaraccay.
+
+El acceso se realiza desde la carretera Huanta-Uchuraccay, donde se desvía un camino que desciende paralelo al río hasta Yanaraccay en la parte alta del valle.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
 
 
-### Data analysis
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & wWater quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
