--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -36,14 +36,24 @@ Access is along the right bank of the river down a rough track through and beyon
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q2.1 se encuentra en un pequeño valle con una estrecha llanura de inundación que corta a través de las estribaciones que bordean el flanco oriental del valle de Cachi, por debajo de Huanta. El río Huanta es conocido como el río Perascucho en este punto.
+
+El sitio de estudio está situado a unos 200 metros por encima de la confluencia del río Huanta con el río Cachi. El acceso para realizar las mediciones es mejor desde la margen derecha cuando el nivel del río es bajo. Cuando el río está alto, puede que no sea posible cruzar el río. La subida y bajada del nivel del río también puede afectar la ubicación precisa del sitio.
+
+El acceso se realiza a lo largo de la orilla derecha del río por un camino accidentado a través y más allá de la Hacienda San José de Toyas. El camino termina aproximadamente 1 km después de la hacienda, entre la vegetación de matorrales por las orillas del río Cachi.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
