--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -36,14 +36,24 @@ Access is along the road to the Occachaca waterfall tourist site where it is pos
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q2.2 se encuentra en un valle estrecho donde el río Huanta ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. El sitio de estudio está situado inmediatamente debajo de la sección más estrecha que contiene la cascada Occachaca cuando el valle comienza a abrirse, sin embargo, hasta ahora, no hay llanura de inundación.
+
+El sitio de estudio está situado justo aguas arriba del puente de la carretera a la entrada del sitio turístico de la cascada de Occachaca. El acceso para tomar medidas es mejor desde la orilla izquierda, pero un sendero al que se accede a través del puente de la carretera, también recorre la orilla derecha facilitando la toma de medidas desde ambas orillas
+
+El acceso es a lo largo de la carretera hasta el sitio turístico de la cascada de Occachaca, donde es posible aparcar en las proximidades del sitio.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
