--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -34,14 +34,22 @@ The study site is situated where the Huanta to Razuhuillca road fords the river 
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q2.3 se encuentra en un valle colgante bastante amplio en lo alto de la sierra Razuhuillca. Las laderas del valle son abruptas y hay una pequeña llanura de inundación.
+
+El sitio de estudio está situado donde el camino de Huanta a Razuhuillca vadea el río - la base de concreto del vado hace más fácil tomar medidas - aproximadamente 1km río abajo del pueblo de Razuhuillca. Incluso si el nivel del río sube, los vehículos pueden proporcionar acceso a ambos lados.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
