--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -28,14 +28,24 @@ Access is from a track running off to the right just beyond the trout farm, from
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q2.4 se encuentra en lo alto de la sierra Razuhuillca, donde confluyen dos valles bastante anchos y de laderas abruptas.
+
+El sitio de estudio está situado justo encima de un criadero de truchas en el extremo superior del pequeño asentamiento de Razuhuillca, donde el agua del embalse Chacacocha en el más alto de los dos valles emerge de un túnel. El río pasa por un angosto corte de unos 25 metros donde se pueden realizar las medidas. 
+
+El acceso se realiza desde una pista que sale a la derecha justo después de la piscigranja de truchas, desde la carretera que sube al embalse de Chacacocha. Para aparcar hay que vadear el río, por lo que las mediciones se realizan desde la orilla izquierda.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
