--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -36,14 +36,24 @@ Access is beyond the settlement of Cangari. A track runs for 300 metres down to 
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q3.1 se encuentra en un amplio valle con una clara llanura de inundación que atraviesa las estribaciones que bordean el flanco oriental del valle de Cachi, debajo de Huanta.
+
+El sitio de estudio está situado donde un camino accidentado vadea el río Huamanguilla-Iguian a unos 100 metros aguas arriba de su confluencia con el río Cachi. Las mediciones se realizan mejor en este punto e incluso si el nivel del río es alto, los vehículos pueden proporcionar acceso a ambos lados.
+
+El acceso se encuentra más allá del pueblito de Cangari. Una trocha desciende 300 metros hasta el río Cachi y luego sigue la orilla derecha río abajo durante unos 750 metros antes de dividirse: tome la trocha de la izquierda durante otros 100 metros para llegar al lugar.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
+
+
+### Data  / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
