--- a/_docs/site-network/Q3_2.md
+++ b/_docs/site-network/Q3_2.md
@@ -36,14 +36,24 @@ Access is down an abandoned track to the left of the Ayahuarcuna bridge looking 
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q3.2 se encuentra en un valle muy estrecho y escarpado donde el río ha erosionado unos 20 metros en el paisaje.
+
+El sitio de estudio está situado a unos 100 metros aguas arriba del puente Ayahuarcuna en la carretera de Huanta a Ayacucho y por encima del punto donde un pequeño afluente entra en el río Huamanguilla-Iguian en la margen izquierda. El acceso para realizar las mediciones es por la margen derecha sobre la confluencia con el pequeño afluente, sin embargo, su posición precisa puede variar con la subida del nivel del río.
+
+El acceso se realiza por un camino abandonado a la izquierda del puente de Ayahuarcuna, aguas arriba. Nota: este camino suele estar encharcada en gran parte de su recorrido.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
