--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -42,14 +42,26 @@ NB.In future visits, a more accessible site much lower downstream is likely to b
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q3.3 está situado en un valle ancho y escarpado con una clara llanura de inundación, aparte de pequeñas colinas que salpican el fondo del valle.
+
+El lugar de estudio visitado en marzo de 2023 está situado aproximadamente 1 km por debajo de la presa de Yanacocha y a 250 metros de la carretera. El punto preciso es donde una trocha abandonada que baja de la carretera se curva alrededor de una colina baja y cruza el río entre dos pequeñas colinas.
+
+Se llega al lugar por un viejo camino abandonado que baja desde la carretera hacia el valle en dirección a la presa. NB. La parte superior de este camino suele estar encharcada.
+
+NB. En futuras visitas, es probable que se utilice un lugar más accesible mucho más abajo río abajo.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
