--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -4,14 +4,25 @@ permalink: /docs/Q2_2/
 ---
 
 
-### Site Q2.2: Middle Huanta - Catarata Occachaca
+### Site Q2.2: 
+
+March 2023 / Marzo 2023: Middle Huanta - Catarata Occachaca
 
 GPS:  S12°935211, W74°223546. 
 Elevation:  2888m asl.
+
+
+June 2023 / Junio 2023: Middle Huanta - Bocatoma Rosastoma
+
+GPS:  S12°94563, W74°233816. 
+Elevation:  2705m asl.
  
 
 ![Q2.2](/assets/sites/Q2.2.jpg)
-Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
+Aerial view of the March 2023 study site / Vista aérea del lugar del estudio en marzo 2023 (March 2023) (John Forrest)
+
+![Q2.2](/assets/sites/Q2.2A.jpg)
+Aerial view of the June 2023 study site / Vista aérea del lugar del estudio en junio 2023 (June 2023) (John Forrest)
 
 
 ![Q2.2site](/assets/sites/Q2.2site.jpg)
