--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -6,13 +6,13 @@ permalink: /docs/Q2_2/
 
 ### Site Q2.2: 
 
-March 2023 / Marzo 2023: Middle Huanta - Catarata Occachaca
+### March 2023 / Marzo 2023: Middle Huanta - Catarata Occachaca
 
 GPS:  S12°935211, W74°223546. 
 Elevation:  2888m asl.
 
 
-June 2023 / Junio 2023: Middle Huanta - Bocatoma Rosastoma
+### June 2023 / Junio 2023: Middle Huanta - Bocatoma Rosastoma
 
 GPS:  S12°94563, W74°233816. 
 Elevation:  2705m asl.
@@ -28,24 +28,37 @@ Aerial view of the June 2023 study site / Vista aérea del lugar del estudio en 
 ![Q2.2site](/assets/sites/Q2.2site.jpg)
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
-
 ![Q2.2downstream2](/assets/sites/Q2.2downstream2.JPG)
 View downstream from the study site (with rubbish) / Visita rio abajo del lugar del estudio (con basura) (March 2023) (John Forrest)
-
 
 ![Q2.2upstream](/assets/sites/Q2.2upstream.jpg)
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
 
 
+![Q2.2site](/assets/sites/Q2.2Asite.jpg)
+The study site / El lugar del estudio (June 2023) (John Forrest)
+
+![Q2.2downstream2](/assets/sites/Q2.2Adownstream2.JPG)
+View downstream from the study site (with rubbish) / Visita rio (canal) abajo del lugar del estudio (June 2023) (John Forrest)
+
+![Q2.2upstream](/assets/sites/Q2.2Aupstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (June 2023) (John Forrest)
+
+
 ### Site description
 
-Q2.2 is located in a narrow valley where the river Huanta has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately below the narrowest section containing the Occachaca waterfall as the valley begins to open out, however, as yet, there is no flood-plain.
+In March 2023 there was no water in the river flowing through Huanta so a site (Q2.2) located in a narrow valley where the river Huanta has cut steeply back in to the lower slopes of the sierra Razuhuillca was visited. The study site is situated immediately below the narrowest section of the valley containing the Occachaca waterfall as the valley begins to open out, however, as yet, there is no flood-plain.
 
 The study site is situated just upstream of the road bridge at the entrance to the Occachaca waterfall tourist site. Access for taking measurements is best from the left bank but a path accessed across the road bridge, also runs along the right bank facilitating the taking of measurements from both banks.
 
 Access is along the road to the Occachaca waterfall tourist site where it is possible to park in close proximity to the site.
 
-(Comments on geology, vegetation and fauna will be added post-future field visits).
+
+In June 2023 water was flowing in the river through Huanta so a site (Q2.2A) located 
+
+The study site is situated immediately below the Bocatoma Rosastoma was visited. All the water in the river was being diverted into an irrigation canal so the samples and measurements were taken at the entrance to the irrigation canal. Immediately upstream of the site at the Bocatoma and above it, several local people were washing their laundry in the river - clearly a regular activity at this location. 
+
+(Comments on geology, vegetation and fauna will be added post-future field visits)
 
 ### Descripción del sitio
 
