--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -1,18 +1,17 @@
 ---
-title: Q2.2 - Middle Huanta - Catarata Occachaca
+title: Q2.2 - Middle Huanta
 permalink: /docs/Q2_2/
 ---
 
 
-### Site Q2.2: 
 
-### March 2023 / Marzo 2023: Middle Huanta - Catarata Occachaca
+### Site Q2.2 March 2023 / Marzo 2023: Middle Huanta - Catarata Occachaca
 
 GPS:  S12°935211, W74°223546. 
 Elevation:  2888m asl.
 
 
-### June 2023 / Junio 2023: Middle Huanta - Bocatoma Rosastoma
+### Site Q2.2A June 2023 / Junio 2023: Middle Huanta - Bocatoma Rosastoma
 
 GPS:  S12°94563, W74°233816. 
 Elevation:  2705m asl.
@@ -35,13 +34,13 @@ View downstream from the study site (with rubbish) / Visita rio abajo del lugar 
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
 
 
-![Q2.2site](/assets/sites/Q2.2Asite.jpg)
+![Q2.2site](/assets/sites/Q2.2Asite.JPG)
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
-![Q2.2downstream2](/assets/sites/Q2.2Adownstream2.JPG)
+![Q2.2downstream2](/assets/sites/Q2.2Adownstream2.jpg)
 View downstream from the study site (with rubbish) / Visita rio (canal) abajo del lugar del estudio (June 2023) (John Forrest)
 
-![Q2.2upstream](/assets/sites/Q2.2Aupstream.jpg)
+![Q2.2upstream](/assets/sites/Q2.2Aupstream.JPG)
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (June 2023) (John Forrest)
 
 
