--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -37,7 +37,7 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ![Q2.2site](/assets/sites/Q2.2Asite.JPG)
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
-![Q2.2downstream2](/assets/sites/Q2.2Adownstream2.jpg)
+![Q2.2downstream2](/assets/sites/Q2.2Adownstream.jpg)
 View downstream from the study site (with rubbish) / Visita rio (canal) abajo del lugar del estudio (June 2023) (John Forrest)
 
 ![Q2.2upstream](/assets/sites/Q2.2Aupstream.JPG)
