--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -37,7 +37,7 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ![Q2.2site](/assets/sites/Q2.2Asite.JPG)
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
-![Q2.2downstream2](/assets/sites/Q2.2Adownstream.jpg)
+![Q2.2downstream2](/assets/sites/Q2.2Adownstream.JPG)
 View downstream from the study site (with rubbish) / Visita rio (canal) abajo del lugar del estudio (June 2023) (John Forrest)
 
 ![Q2.2upstream](/assets/sites/Q2.2Aupstream.JPG)
@@ -46,16 +46,18 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
-In March 2023 there was no water in the river flowing through Huanta so a site (Q2.2) located in a narrow valley where the river Huanta has cut steeply back in to the lower slopes of the sierra Razuhuillca was visited. The study site is situated immediately below the narrowest section of the valley containing the Occachaca waterfall as the valley begins to open out, however, as yet, there is no flood-plain.
+In March 2023 there was no water in the river flowing through Huanta so a site (Q2.2) in a narrow valley where the river Huanta has cut steeply back in to the lower slopes of the sierra Razuhuillca was visited. The study site is located immediately below the narrowest section of the valley containing the Occachaca waterfall as the valley begins to open out, however, as yet, there is no flood-plain.
 
 The study site is situated just upstream of the road bridge at the entrance to the Occachaca waterfall tourist site. Access for taking measurements is best from the left bank but a path accessed across the road bridge, also runs along the right bank facilitating the taking of measurements from both banks.
 
-Access is along the road to the Occachaca waterfall tourist site where it is possible to park in close proximity to the site.
+Access is along the road to the Occachaca waterfall tourist site, where it is possible to park in close proximity to the site.
 
 
-In June 2023 water was flowing in the river through Huanta so a site (Q2.2A) located 
+In June 2023 water was flowing in the river through Huanta so a site (Q2.2A) in the centre of Huanta adjoining the M.Cordova la Torre park was visited. The study site is located below the Huanta to Ayacucho road bridge, at the lower end of the park, where the river channel descends quite steeply around the southern side of Huanta.
 
-The study site is situated immediately below the Bocatoma Rosastoma was visited. All the water in the river was being diverted into an irrigation canal so the samples and measurements were taken at the entrance to the irrigation canal. Immediately upstream of the site at the Bocatoma and above it, several local people were washing their laundry in the river - clearly a regular activity at this location. 
+The study site is situated immediately below the Bocatoma Rosastoma. All the water in the river was being diverted into an irrigation canal so the samples and measurements were taken at the entrance to the irrigation canal. If the water is not being diverted then the samples and measurmeents should be taken from the main channel below the bocatoma. Immediately upstream of the site at the Bocatoma and above it, several local people were washing their laundry in the river - clearly a regular activity at this location.
+
+Access is down the road running beside the M.Cordova la Torre park, where it is possible to park in close proximity to the site.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits)
 
