--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -63,11 +63,18 @@ Access is down the road running beside the M.Cordova la Torre park, where it is 
 
 ### Descripción del sitio
 
-Q2.2 se encuentra en un valle estrecho donde el río Huanta ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. El sitio de estudio está situado inmediatamente debajo de la sección más estrecha que contiene la cascada Occachaca cuando el valle comienza a abrirse, sin embargo, hasta ahora, no hay llanura de inundación.
+En marzo de 2023 no había agua en el río que fluye a través de Huanta, por lo que se visitó un sitio (Q2.2) en un valle estrecho donde el río Huanta ha cortado abruptamente hacia las laderas más bajas de la sierra Razuhuillca. El sitio de estudio se encuentra inmediatamente debajo de la sección más estrecha del valle que contiene la cascada Occachaca cuando el valle comienza a abrirse, sin embargo, hasta ahora, no hay llanura de inundación.
 
-El sitio de estudio está situado justo aguas arriba del puente de la carretera a la entrada del sitio turístico de la cascada de Occachaca. El acceso para tomar medidas es mejor desde la orilla izquierda, pero un sendero al que se accede a través del puente de la carretera, también recorre la orilla derecha facilitando la toma de medidas desde ambas orillas
+El lugar de estudio está situado justo aguas arriba del puente de la carretera, a la entrada del sitio turístico de la cascada de Occachaca. El acceso para realizar mediciones es mejor desde la orilla izquierda, pero un sendero al que se accede a través del puente de la carretera recorre también la orilla derecha, lo que facilita la realización de mediciones desde ambas orillas.
 
 El acceso es a lo largo de la carretera hasta el sitio turístico de la cascada de Occachaca, donde es posible aparcar en las proximidades del sitio.
+
+
+En junio de 2023 el agua fluía en el río a través de Huanta por lo que se visitó un sitio (Q2.2A) en el centro de Huanta colindante con el parque M.Cordova la Torre. El sitio de estudio está ubicado debajo del puente de la carretera de Huanta a Ayacucho, en el extremo inferior del parque, donde el canal del río desciende bastante abruptamente alrededor del lado sur de Huanta.
+
+El lugar del estudio está situado inmediatamente debajo del Bocatoma Rosastoma. Toda el agua del río estaba siendo desviada a un canal de riego, por lo que las muestras y mediciones se tomaron a la entrada del canal de riego. Si el agua no se desvía, las muestras y mediciones deben tomarse en el cauce principal por debajo de la bocatoma. Inmediatamente aguas arriba del emplazamiento de la bocatoma y por encima de ella, varios lugareños lavaban la ropa en el río, una actividad claramente habitual en este lugar.
+
+El acceso es por la carretera que discurre junto al parque M.Cordova la Torre, donde es posible aparcar muy cerca del lugar.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
 
