--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -27,7 +27,7 @@ Aerial view of the June 2023 study site / Vista aérea del lugar del estudio en 
 ![Q2.2site](/assets/sites/Q2.2site.jpg)
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
-![Q2.2downstream2](/assets/sites/Q2.2downstream.JPG)
+![Q2.2downstream2](/assets/sites/Q2.2downstream2.JPG)
 View downstream from the study site (with rubbish) / Visita rio abajo del lugar del estudio (con basura) (March 2023) (John Forrest)
 
 ![Q2.2upstream](/assets/sites/Q2.2upstream.jpg)
@@ -101,7 +101,7 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     CSA / Area traversal (Av.) (m²)                      |     1.33                                                 |
 |     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                                                 |
 |     Discharge / Caudal (Av.) (m³/s)                      |     0.560                                                |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas               |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                          |
 |     Temperature (Atmospheric) (°C)                       |     20.3                                                 |
 |     Temperature (Water / Agua) (°C)                      |     11.09                                                |
 |     Atmospheric pressure / presión (mbar)                |     762.6                                                |
@@ -111,7 +111,7 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     Conductivity / Conductividad (µS/cm)                 |     53                                                   |
 |     Total Dissolved Solids (TDS / STD)  (ppm)            |     26                                                   |
 |     ORP (mV)                                             |     212.2                                                |
-|     Turbidity / Turbidez                                 |     Clear, slightly grey / Transparente,   poco gris     |
+|     Turbidity / Turbidez                                 |     Clear, slightly grey / Transparente, poco gris       |
 |     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     47 (1.6N)                                            |
 |     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     48                                                   |
 
