--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -4,14 +4,21 @@ permalink: /docs/Q3_3/
 ---
 
 
-### Site Q3.3 - Middle Huamanguilla-Iguian - Yanacocha
+### Site Q3.3 March 2023 / Marzo 2023: Upper Huamanguilla-Iguian - Yanacocha
 
-GPS: S12°958332, W74°129012. 
-Elevation: 4060m asl.
+GPS: S12°958332, W74°129012. Elevation: 4060m asl.
+
+
+### Site Q3.3A June 2023 / Junio 2023: Upper Huamanguilla-Iguian - above Cora Cora
+
+GPS: S12°985667, W74°178212. Elevation: 3225m asl.
 
 
 ![Q3.3](/assets/sites/Q3.3.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
+
+![Q3.3](/assets/sites/Q3.3A.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (June 2023) (John Forrest)
 
 
 ![Q3.3site](/assets/sites/Q3.3site.jpg)
