--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -37,14 +37,14 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 
 ### Q3.3A site visit June 2023 / Visita a Q3.3A en junio 2023
 
-![Q3.3site](/assets/sites/Q3.3Asite.jpg)
+![Q3.3downstream](/assets/sites/Q3.3Adownstream.JPG)
+View downstream from the study site / Visita rio abajo del lugar del estudio (June 2023) (John Forrest)
+
+![Q3.3site](/assets/sites/Q3.3Bsite.jpg)
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
-![Q3.3upstream](/assets/sites/Q3.3Aupstream.JPG)
-View downstream from the study site / Vista rio abajo desde el lugar del estudio (Juneh 2023) (John Forrest)
-
-![Q3.3downstream](/assets/sites/Q3.3Adownstream.JPG)
-View upstream from the study site / Visita rio arriba del lugar del estudio (June 2023) (John Forrest)
+![Q3.3upstream](/assets/sites/Q3.3Bupstream.JPG)
+View downstream from the study site / Vista rio abajo desde el lugar del estudio (June 2023) (John Forrest)
 
 
 ### Site description
