--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -40,10 +40,10 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 ![Q3.3downstream](/assets/sites/Q3.3Adownstream.JPG)
 View downstream from the study site / Visita rio abajo del lugar del estudio (June 2023) (John Forrest)
 
-![Q3.3site](/assets/sites/Q3.3Bsite.jpg)
+![Q3.3site](/assets/sites/Q3.3Bsite.JPG)
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
-![Q3.3upstream](/assets/sites/Q3.3Bupstream.JPG)
+![Q3.3downstream](/assets/sites/Q3.3Bdownstream.JPG)
 View downstream from the study site / Vista rio abajo desde el lugar del estudio (June 2023) (John Forrest)
 
 
