--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -38,7 +38,7 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 ### Q3.3A site visit June 2023 / Visita a Q3.3A en junio 2023
 
 ![Q3.3downstream](/assets/sites/Q3.3Adownstream.JPG)
-View downstream from the study site / Visita rio abajo del lugar del estudio (June 2023) (John Forrest)
+View upstream from the study site / Visita rio arriba del lugar del estudio (June 2023) (John Forrest)
 
 ![Q3.3site](/assets/sites/Q3.3Bsite.JPG)
 The study site Q3.3B / El lugar del estudio Q3.3B (June 2023) (John Forrest)
@@ -49,25 +49,38 @@ View downstream from the study site towards site Q3.3B / Vista rio abajo desde e
 
 ### Site description
 
-Q3.3 is located in a wide, steep sided valley with a clear flood-plain apart from where there are small hills dotting the valley floor.
+The study site visited in March 2023is located in a wide, steep sided valley with a clear flood-plain apart from where there are small hills dotting the valley floor.
 
-The study site visited in March 2023 is situated about 1km below the Yanacocha dam and 250 metres from the road. The precise point is where an abandoned track running down from the road curves round a low hill and crosses the river between two small hills.
+The study site is situated about 1km below the Yanacocha dam and 250 metres from the road. The precise point is where an abandoned track running down from the road curves round a low hill and crosses the river between two small hills.
 
 The site is reached down an old, abandoned track running down from the road in to the valley towards the dam. NB. The upper section of this track is often waterlogged.
 
-NB.In future visits, a more accessible site much lower downstream is likely to be used.
+
+The study site visited in June 2023 is located in a steep sided, heavily wooded valley, where the river emerges from the steepest slopes of the sierra Razuhuillca.
+
+The study site is situated about 3kms up the valley from the small settlement of Cora Cora, above Iguian, and about 50 metres upstream from the Iguian to Huamanguilla road bridge crossing the river.
+
+The site can be reached by traversing to the top of a field on the left bank.
+
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+
 ### Descripción del sitio
 
-Q3.3 está situado en un valle ancho y escarpado con una clara llanura de inundación, aparte de pequeñas colinas que salpican el fondo del valle.
+El sitio de estudio visitado en marzo de 2023 está situado en un valle ancho y escarpado con una clara llanura de inundación, aparte de pequeñas colinas que salpican el fondo del valle.
 
 El lugar de estudio visitado en marzo de 2023 está situado aproximadamente 1 km por debajo de la presa de Yanacocha y a 250 metros de la carretera. El punto preciso es donde una trocha abandonada que baja de la carretera se curva alrededor de una colina baja y cruza el río entre dos pequeñas colinas.
 
 Se llega al lugar por un viejo camino abandonado que baja desde la carretera hacia el valle en dirección a la presa. NB. La parte superior de este camino suele estar encharcada.
 
-NB. En futuras visitas, es probable que se utilice un lugar más accesible mucho más abajo río abajo.
+
+El sitio de estudio visitado en junio de 2023 está ubicado en un valle de laderas empinadas y muy boscoso, donde el río emerge de las laderas más empinadas de la sierra Razuhuillca.
+
+El lugar de estudio está situado a unos 3 km valle arriba del pequeño asentamiento de Cora Cora, por encima de Iguian, y a unos 50 metros río arriba del puente de la carretera de Iguian a Huamanguilla que cruza el río.
+
+Se accede al sitio atravesando hasta la zona superior de un campo en la orilla izquierda.
+
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
 
