--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -10,19 +10,20 @@ permalink: /docs/Q2_2/
 GPS:  S12°935211, W74°223546. 
 Elevation:  2888m asl.
 
+![Q2.2](/assets/sites/Q2.2.jpg)
+Aerial view of the March 2023 study site / Vista aérea del lugar del estudio en marzo 2023 (March 2023) (John Forrest)
+
 
 ### Site Q2.2A June 2023 / Junio 2023: Middle Huanta - Bocatoma Rosastoma
 
 GPS:  S12°94563, W74°233816. 
 Elevation:  2705m asl.
- 
-
-![Q2.2](/assets/sites/Q2.2.jpg)
-Aerial view of the March 2023 study site / Vista aérea del lugar del estudio en marzo 2023 (March 2023) (John Forrest)
 
 ![Q2.2](/assets/sites/Q2.2A.jpg)
 Aerial view of the June 2023 study site / Vista aérea del lugar del estudio en junio 2023 (June 2023) (John Forrest)
 
+
+### Visita en March 2023 / Visita en marzo 2023
 
 ![Q2.2site](/assets/sites/Q2.2site.jpg)
 The study site / El lugar del estudio (March 2023) (John Forrest)
@@ -33,6 +34,8 @@ View downstream from the study site (with rubbish) / Visita rio abajo del lugar 
 ![Q2.2upstream](/assets/sites/Q2.2upstream.jpg)
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
 
+
+### Visit en June 2023 / Visita en junio 2023
 
 ![Q2.2site](/assets/sites/Q2.2Asite.JPG)
 The study site / El lugar del estudio (June 2023) (John Forrest)
@@ -60,6 +63,7 @@ The study site is situated immediately below the Bocatoma Rosastoma. All the wat
 Access is down the road running beside the M.Cordova la Torre park, where it is possible to park in close proximity to the site.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits)
+
 
 ### Descripción del sitio
 
