--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -41,10 +41,10 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 View upstream from the study site / Visita rio arriba del lugar del estudio (June 2023) (John Forrest)
 
 ![Q3.3site](/assets/sites/Q3.3Bsite.JPG)
-The study site Q3.3B / El lugar del estudio Q3.3B (June 2023) (John Forrest)
+The study site Q3.3B with the 'milky' coloured outflow from the left bank clearly visible / El lugar de estudio Q3.3B con el flujo de salida de color "lechoso" de la orilla izquierda claramente visible (June 2023) (John Forrest)
 
 ![Q3.3downstream](/assets/sites/Q3.3Bupstream.JPG)
-View downstream from the study site towards site Q3.3B / Vista rio abajo desde el lugar del estudio hacia sitio Q3.3B (June 2023) (John Forrest)
+View downstream from the study site towards site Q3.3B with the 'milky' coloured outflow from the left bank clearly visible / Vista rio abajo desde el lugar del estudio hacia sitio Q3.3B con el flujo de salida de color "lechoso" de la orilla izquierda claramente visible (June 2023) (John Forrest)
 
 
 ### Site description
