--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -4,7 +4,6 @@ permalink: /docs/Q2_2/
 ---
 
 
-
 ### Site Q2.2 March 2023 / Marzo 2023: Middle Huanta - Catarata Occachaca
 
 GPS:  S12°935211, W74°223546. 
@@ -41,7 +40,7 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
 ![Q2.2downstream2](/assets/sites/Q2.2Adownstream.JPG)
-View downstream from the study site (with rubbish) / Visita rio (canal) abajo del lugar del estudio (June 2023) (John Forrest)
+View downstream from the study site / Visita rio (canal) abajo del lugar del estudio (June 2023) (John Forrest)
 
 ![Q2.2upstream](/assets/sites/Q2.2Aupstream.JPG)
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (June 2023) (John Forrest)
