--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -27,7 +27,7 @@ Aerial view of the June 2023 study site / Vista aérea del lugar del estudio en 
 ![Q2.2site](/assets/sites/Q2.2site.jpg)
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
-![Q2.2downstream2](/assets/sites/Q2.2downstream.jpg)
+![Q2.2downstream2](/assets/sites/Q2.2downstream.JPG)
 View downstream from the study site (with rubbish) / Visita rio abajo del lugar del estudio (con basura) (March 2023) (John Forrest)
 
 ![Q2.2upstream](/assets/sites/Q2.2upstream.jpg)
