--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -61,27 +61,27 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q1.1                                   |     March / marzo 2023                        |
-|----------------------------------------------------------|---------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano           |
-|     Date / Fecha:                                        |     15.3.23                           |
-|     Time / Hora:                                         |     7.45                              |
-|     Width / Ancho (m)                                    |     2.70                              |
-|     Depth / Profundidad (Av.) (m)                        |     0.08                              |
-|     CSA / Area traversal (Av.) (m²)                      |     0.22                              |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.20                              |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.044                             |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |
-|     Temperature (Atmospheric) (°C)                       |     15.6                              |
-|     Temperature (Water / Agua) (°C)                      |     16.6                              |
-|     Atmospheric pressure / presión (mbar)                |     805.7                             |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |
-|     pH                                                   |     8.38                              |
-|     Conductivity / Conductividad (µS/cm)                 |     913                               |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     456                               |
-|     ORP (mV)                                             |     224.5                             |
-|     Turbidity / Turbidez                                 |     Clear / Transparente              |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     340 (1.6N)                        |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     308                               |
+| **    Site / Sitio: Q1.1   **                            | **    March / marzo 2023   **         | **    June / junio 2023   **     |
+|----------------------------------------------------------|---------------------------------------|----------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |
+|     Date / Fecha:                                        |     15.3.23                           |     18.6.23                      |
+|     Time / Hora:                                         |     7.45                              |     8.45                         |
+|     Width / Ancho (m)                                    |     2.70                              |     3.10                         |
+|     Depth / Profundidad (Av.) (m)                        |     0.08                              |     0.16                         |
+|     CSA / Area traversal (Av.) (m²)                      |     0.22                              |     0.50                         |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.20                              |     0.451                        |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.044                             |     0.224                        |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     All sizes / Todos tamaños    |
+|     Temperature (Atmospheric) (°C)                       |     15.6                              |     11.5                         |
+|     Temperature (Water / Agua) (°C)                      |     16.60                             |     14.89                        |
+|     Atmospheric pressure / presión (mbar)                |     805.7                             |     807.0                        |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |     9.71                         |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |     117.3                        |
+|     pH                                                   |     8.38                              |     8.25                         |
+|     Conductivity / Conductividad (µS/cm)                 |     913                               |     597                          |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     456                               |     299                          |
+|     ORP (mV)                                             |     224.5                             |     112.0                        |
+|     Turbidity / Turbidez                                 |     Clear / Transparente              |     Clear / Transparente         |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     340 (1.6N)                        |     202 (1.6N)                   |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     308                               |     169                          |
 
