--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -61,7 +61,7 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-| **    Site / Sitio: Q1.1   **                            | **    March / marzo 2023   **         | **    June / junio 2023   **     |
+|     Site / Sitio: Q1.1                                   |        March / marzo 2023             |      June / junio 2023           |
 |----------------------------------------------------------|---------------------------------------|----------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |
 |     Date / Fecha:                                        |     15.3.23                           |     18.6.23                      |
